methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:25: error: too many arguments for method run: ()Unit
run {
    ^